@@ -2,13 +2,13 @@ package prjcb04.amaiproject2024.business.Implementation;
 
 import prjcb04.amaiproject2024.business.AgendaService;
 import prjcb04.amaiproject2024.domain.Event;
+import prjcb04.amaiproject2024.domain.User;
 import prjcb04.amaiproject2024.persistence.EventRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AgendaServiceImpl implements AgendaService {
@@ -20,18 +20,37 @@ public class AgendaServiceImpl implements AgendaService {
     }
 
     @Override
-    public List<Event> getUpcomingEvents(LocalDateTime now) {
+    public List<Event> getUpcomingEvents(LocalDateTime now, Integer duration) {
         return eventRepository.findAll().stream()
                 .filter(event -> event.getDate().isAfter(now))
+                .filter(event -> duration == null || event.getDuration() == (duration))
                 .sorted(Comparator.comparing(Event::getDate))
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     @Override
-    public List<Event> getPastEvents(LocalDateTime now) {
+    public List<Event> getPastEvents(LocalDateTime now, Integer duration) {
         return eventRepository.findAll().stream()
                 .filter(event -> event.getDate().isBefore(now))
-                .collect(Collectors.toList());
+                .filter(event -> duration == null || event.getDuration() == (duration))
+                .toList();
     }
+
+    @Override
+    public List<Event> getUpcomingEventsByUser(User user, LocalDateTime now) {
+        return eventRepository.findBySpeaker(user).stream()
+                .filter(event -> event.getDate().isAfter(now))
+                .filter(event -> event.getSpeaker().equals(user))
+                .sorted(Comparator.comparing(Event::getDate))
+                .toList();
+    }
+
+    @Override
+    public List<Event> getPastEventsByUser(User user, LocalDateTime now) {
+        return eventRepository.findBySpeaker(user).stream()
+                .filter(event -> event.getDate().isBefore(now))
+                .filter(event -> event.getSpeaker().equals(user))
+                .toList();
+    }
+
 }
